# freeclaude

./: .claudeignore  .dockerignore  .freeclaude.example.json  .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Dockerfile  FINAL_TEST_REPORT.md  FREECLAUDE_V2_PLAN.md  FREEClaude.md  FreeClaude - План FreeClaude.md  INSTALL-freeclaude.sh  INTERACTIVE_TEST_REPORT.md  MASTER_PLAN_V3.md  PROVIDER_SETUP.md  PROVIDER_STATUS.md  PROVIDER_TEST_REPORT.md  QUICKSTART.md  README.md  REFACTORING_PLAN.md  RELEASE_NOTES_v3.0.0.md  RESEARCH_V3.md  ROUTINES_PLAN.md  TEST_ANALYSIS.md  TEST_REPORT.md  install.sh  package-lock.json  package.json  tsconfig.supported.json  tsconfig.telegram.json
.claude/: settings.json
desktop/: .gitignore  README.md  RELEASE.md  eslint.config.mjs  forge.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vitest.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  CONTRIBUTING.md  FAQ.md  INSTALLATION.md  MCP.md  MEMORY.md  PROVIDERS.md  README.md  TELEGRAM_BOT_PLAN.md  VOICE.md
extension/: package-lock.json  package.json  tsconfig.json
mcp-servers/: README.md
openclaw-plugin/: bidi-mcp.mjs  bidi-mcp.test.ts  delegation-schema.mjs  freeclaude-backend.mjs  freeclaude-direct.mjs  index.mjs  inspection.mjs  mcp-server.mjs  openclaw.plugin.json  runtime-state.mjs
scripts/: build.ts  check-version-truth.ts  (+9 more)
(+392 files in other folders)
