[package]
name = "freeclaude-desktop"
version = "3.0.0"
description = "FreeClaude Desktop — Free AI Coding Agent"
authors = ["FreeClaude Team"]
edition = "2021"

[lib]
name = "freeclaude_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
